--- a/trunk/Languages/default-lt.xml
+++ b/trunk/Languages/default-lt.xml
@@ -4205,7 +4205,7 @@ right quote	&#147;
 	</list>
 	<list name="CReviewList">
 		<column from="User" to="Vartotojas"/>
-		<column from="Rating" to="Įverinimas"/>
+		<column from="Rating" to="Įvertinimas"/>
 		<column from="Comments" to="Komentarai"/>
 		<column from="Order" to="Eilė"/>
 	</list>
