--- a/trunk/Languages/default-en.xml
+++ b/trunk/Languages/default-en.xml
@@ -3021,7 +3021,7 @@
 	<string id="20210" value="(No Rating)"/>
 	<string id="20211" value="Fake / Corrupt"/>
 	<string id="20212" value="Poor"/>
-	<string id="20213" value="Avarage"/>
+	<string id="20213" value="Average"/>
 	<string id="20214" value="Good"/>
 	<string id="20215" value="Very Good"/>
 	<string id="20216" value="Excellent"/>
