BitTorrent encoding error and Bad Search messages translated

--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -2020,6 +2020,18 @@
 		<text>Родители всегда должны присматривать за детьми, когда они пользуются интернетом (в том числе и обменом файлами в P2P).</text>
 	</document>
 
+	<document name="GeneralHelp.BadTorrentEncoding">
+		<text format="b">У этого торрента имеются ошибки кодировки</text>
+		<newline gap="8"/>
+		<text>Windows сообщили, что во время раскодировки этого торрента обнаружена ошибка перевода. Может быть, что
+		этот файл испорчен или просто неправильно закодирован. Загрузка торрента, наверное, не пострадает, но
+		некотрые имена файлов могут быть неправильными.</text>
+		<newline gap="8"/>
+		<text>Большинство программ для создания торрентов должно исправить этот файл торрента. Исправление гарантировало бы,
+		что он бутет работать со всеми программами BitTorrent. Посетите форумы Shareaza, если Вам нужна дополнительная помощь.
+		</text>
+	</document>
+
 	<!-- Search help documents -->
 
 	<document name="SearchHelp.BadSearch">
@@ -2032,6 +2044,16 @@
 		<newline gap="8"/>
 		<text> Многие клиенты в сети будут игнорировать такие запросы, как например, запрос на
 		все MP3 файлы, так как он не достаточно конкретный.</text>
+	</document>
+
+	<document name="SearchHelp.BadSearch2">
+		<text format="b">Перефразируйте Ваш поиск</text>
+		<newline gap="8"/>
+		<text>Ваш поиск плохо сформатирован, и он может работать неправильно. Для того, чтобы смогли начать поиск,
+		 Вы должны использовать минимальное число правильных букв/знаков.</text>
+		<newline gap="8"/>
+		<text>Если в Вашем запросе имеются тип файла или цифры, Вы толжны указать дополнительные условия тоже.
+		</text>
 	</document>
 
 	<document name="SearchHelp.AdultSearch">
